--- a/client/templates/explore.html
+++ b/client/templates/explore.html
@@ -1,7 +1,7 @@
 <template name="explore">
 	<div class="container-fluid zero-margin zero-padding">
 		<div id="left-panel" class="col-md-2">
-			<a href="{{pathFor route='create-project'}}"><button class="btn btn-primary center-block">New</button></a>
+			<a href="{{pathFor route='new-project'}}"><button class="btn btn-primary center-block">New</button></a>
 			<div id="category" class="row center-block">
 				<h5>Categories</h5>
 				<div class="input-group">
