--- a/client/templates/master.html
+++ b/client/templates/master.html
@@ -42,4 +42,15 @@
 		</div>
 	</nav>
 	{{> yield}}
+	<footer id="footer" class="container-fluid">
+		<div class="col-md-2"></div>
+		<div class="col-md-4">
+			<h5>CollabApp Logo</h5>
+			<h6>All rights reserved &#169;</h6>
+		</div>
+		<div class="col-md-4 text-right bottom-align-text">
+			<h6>School of Mechanical And Aerospace Engineering<br>Nanyang Technological University, Singapore</h6>
+		</div>
+		<div class="col-md-2"></div>
+	</footer>
 </template>
