--- a/client/templates/project.html
+++ b/client/templates/project.html
@@ -41,10 +41,27 @@
 		<div class="col-md-pull-2 col-md-10 image-gallery">
 			<div id="image-gallery" data-ride="carousel" class="carousel slide">
 				<div role="listbox" class="carousel-inner">
-					<div class="item active"><img src="http://placehold.it/1000x700" class="img-responsive center-block gallery-thumbnail"></div>
-				</div><a href="#image-gallery" role="button" data-slide="prev" class="left carousel-control"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span><span class="sr-only">Previous</span></a><a href="#image-gallery" role="button" data-slide="next" class="right carousel-control"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span><span class="sr-only">Next</span></a>
+					<div class="item active">
+						<img src="/img/carousel/Project_2/1.jpg" class="img-responsive center-block gallery-thumbnail active-img">
+					</div>
+				</div>
+				<a href="#image-gallery" role="button" data-slide="prev" class="left carousel-control">
+					<span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a href="#image-gallery" role="button" data-slide="next" class="right carousel-control">
+					<span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span>
+					<span class="sr-only">Next</span>
+				</a>
 			</div>
-			<div class="owl-carousel"><img src="http://placehold.it/1000x700" class="img-responsive"><img src="http://placehold.it/1000x700" class="img-responsive"><img src="http://placehold.it/1000x700" class="img-responsive"><img src="http://placehold.it/1000x700" class="img-responsive"><img src="http://placehold.it/1000x700" class="img-responsive"><img src="http://placehold.it/1000x700" class="img-responsive"></div>
+			<div class="owl-carousel">
+				<img src="/img/carousel/Project_2/2.jpg" class="img-responsive inactive-img-1">
+				<img src="/img/carousel/Project_2/3.jpg" class="img-responsive inactive-img-2">
+				<img src="/img/carousel/Project_2/4.jpg" class="img-responsive inactive-img-3">
+				<img src="/img/carousel/Project_2/5.jpg" class="img-responsive inactive-img-4">
+				<img src="/img/carousel/Project_2/6.jpg" class="img-responsive inactive-img-5">
+				<img src="/img/carousel/Project_2/7.jpg" class="img-responsive inactive-img-6">
+			</div>
 		</div>
 		<h6 class="text-justify col-md-10">{{description}}</h6>
 	</div>
