added missing items in create new project pages

--- a/ui_coding/css/custom.css
+++ b/ui_coding/css/custom.css
@@ -100,10 +100,10 @@ body {
 #right-panel {
     overflow-y: scroll;
 }
-#category, #tags {
+#category {
     padding-top: 10px;
 }
-#category .list-group button, #tags .list-group button {
+#category .list-group button {
     max-width: 80%;
 }
 #sorting-row {
