--- a/ui_coding/jade/brainstorm.jade
+++ b/ui_coding/jade/brainstorm.jade
@@ -1,7 +1,7 @@
 extends layout.jade
 
 block title
-  title Idea | CollabApp
+  title Brainstorm | CollabApp
 
 block link
   link(href='css/owl.carousel.css', rel='stylesheet')
