--- a/client/templates/authentication.html
+++ b/client/templates/authentication.html
@@ -5,7 +5,7 @@
 				<form>
 					<h2>Login</h2>
 					<div class="alert alert-danger login-alert hidden" role="alert"></div>
-					<input type="text" class="form-control login-email" placeholder="Email" required>
+					<input type="text" class="form-control login-username" placeholder="Username" required>
 					<input type="password" class="form-control login-password" placeholder="Password" required>
 					<button type="submit" class="btn btn-primary login-submit">Submit</button>
 				</form>
@@ -17,6 +17,7 @@
 					<input type="text" class="form-control register-firstname" placeholder="First name" required>
 					<input type="text" class="form-control register-lastname" placeholder="Last name" required>
 					<input type="text" class="form-control register-email" placeholder="Email" required>
+					<input type="text" class="form-control register-username" placeholder="Username" required>
 					<input type="password" class="form-control register-password" placeholder="Password" required>
 					<input type="password" class="form-control register-reentpassword" placeholder="Re-enter Password" required>
 					<button type="submit" class="btn btn-primary register-submit">Submit</button>
