--- a/client/templates/brainstorm.html
+++ b/client/templates/brainstorm.html
@@ -5,22 +5,22 @@
 			<h3>{{title}}</h3>
 			<div class="col-md-push-10 col-md-2">
 				<div class="row brainstorm-details">
-					<div class="col-xs-6 col-md-6"><img src="http://placehold.it/50x50" class="img-circle img-responsive"></div>
-					<div class="col-xs-6 col-md-6">
-						<div class="row">{{Author}}</div>
+					<div class="col-xs-3 col-md-6"><img src="http://placehold.it/50x50" class="img-circle img-responsive"></div>
+					<div class="col-xs-9 col-md-6">
+						<div class="row">{{authorName}}</div>
 						<div class="row"></div>
 					</div>
 				</div>
 				<div class="row brainstorm-details">
-					<div class="col-xs-6 col-md-6"><img src="http://placehold.it/50x50" class="img-circle img-responsive"></div>
-					<div class="col-xs-6 col-md-6">
+					<div class="col-xs-3 col-md-6"><img src="http://placehold.it/50x50" class="img-circle img-responsive"></div>
+					<div class="col-xs-9 col-md-6">
 						<div class="row">{{stats}}</div>
 						<div class="row">Post Date</div>
 					</div>
 				</div>
 				<div class="row brainstorm-details">
-					<div class="col-xs-6 col-md-6"><img src="http://placehold.it/50x50" class="img-circle img-responsive"></div>
-					<div class="col-xs-6 col-md-6">
+					<div class="col-xs-3 col-md-6"><img src="http://placehold.it/50x50" class="img-circle img-responsive"></div>
+					<div class="col-xs-9 col-md-6">
 						<div class="row">{{views}}</div>
 						<div class="row">View</div>
 					</div>
@@ -32,8 +32,24 @@
 			<div class="col-md-pull-2 col-md-10 image-gallery">
 				<div id="image-gallery" data-ride="carousel" class="carousel slide">
 					<div role="listbox" class="carousel-inner">
-						<div class="item active"><img src="http://placehold.it/1000x700" class="img-responsive center-block gallery-thumbnail"></div>
-					</div><a href="#image-gallery" role="button" data-slide="prev" class="left carousel-control"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span><span class="sr-only">Previous</span></a><a href="#image-gallery" role="button" data-slide="next" class="right carousel-control"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span><span class="sr-only">Next</span></a>
+						<div class="item active">
+							<img src="http://placehold.it/1000x700" class="img-responsive center-block gallery-thumbnail">
+						</div>
+						<div class="item">
+							<img src="http://placehold.it/1000x700" class="img-responsive center-block gallery-thumbnail">
+						</div>
+						 <div class="item">
+						 	<img src="http://placehold.it/1000x700" class="img-responsive center-block gallery-thumbnail">
+					 	</div>
+				 	</div>
+					 <a role="button" href="#image-gallery" data-slide="prev" class="left carousel-control">
+						 <span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span>
+						 <span class="sr-only">Previous</span>
+					 </a>
+					 <a role="button" href="#image-gallery" data-slide="next" class="right carousel-control">
+						 <span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span>
+						 <span class="sr-only">Next</span>
+					 </a>
 				</div>
 				<div class="owl-carousel"><img src="http://placehold.it/1000x700" class="img-responsive"><img src="http://placehold.it/1000x700" class="img-responsive"><img src="http://placehold.it/1000x700" class="img-responsive"><img src="http://placehold.it/1000x700" class="img-responsive"><img src="http://placehold.it/1000x700" class="img-responsive"><img src="http://placehold.it/1000x700" class="img-responsive"></div>
 			</div>
@@ -46,79 +62,144 @@
 		<div class="col-md-10">
 			<!-- Nav tabs-->
 			<ul role="tablist" class="nav nav-tabs">
-				<li role="presentation" class="active"><a href="#ideas" aria-controls="Ideas" role="tab" data-toggle="tab">Ideas</a></li>
-				<li role="presentation"><a href="#comments" aria-controls="Comments" role="tab" data-toggle="tab">Comments</a></li>
+				<li role="presentation" class="active">
+					<a href="#ideas" aria-controls="Ideas" role="tab" data-toggle="tab">Ideas</a>
+				</li>
+				<li role="presentation">
+					<a href="#comments" aria-controls="Comments" role="tab" data-toggle="tab">Comments</a>
+				</li>
 			</ul>
 			<!-- Tab panes-->
 			<div class="tab-content">
 				<div id="ideas" role="tabpanel" class="tab-pane active">
 					<div class="row zero-margin margin-top-bottom">
 						<button id="add-content" class="btn btn-success">Add Content</button>
-					</div><a href="#" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
+					</div>
+					<a href="#" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill">
+						<img src="http://placehold.it/500x300" class="img-responsive">
 						<div class="content-pill-title">Title</div>
-						<div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;&nbsp;Author name</span></div>
+							<div class="content-pill-author">
+								<span><img src="http://placehold.it/20x20" class="img-circle"></span>
+								<span>&nbsp;&nbsp;&nbsp;Author name</span>
+							</div>
 						<div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 						<div class="well zero-padding content-pill-footer">
-							<div class="label label-default"><span class="glyphicon glyphicon-heart"></span><span>999</span></div>
-						</div></a><a href="#" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
+							<div class="label label-default">
+								<span class="glyphicon glyphicon-heart"></span>
+								<span>999</span>
+							</div>
+						</div>
+					</a>
+					<a href="#" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill">
+						<img src="http://placehold.it/500x300" class="img-responsive">
 						<div class="content-pill-title">Title</div>
-						<div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;&nbsp;Author name</span></div>
+							<div class="content-pill-author">
+								<span><img src="http://placehold.it/20x20" class="img-circle"></span>
+								<span>&nbsp;&nbsp;&nbsp;Author name</span>
+							</div>
 						<div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 						<div class="well zero-padding content-pill-footer">
-							<div class="label label-default"><span class="glyphicon glyphicon-heart"></span><span>999</span></div>
-						</div></a><a href="#" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
+							<div class="label label-default">
+								<span class="glyphicon glyphicon-heart"></span>
+								<span>999</span>
+							</div>
+						</div>
+					</a>
+					<a href="#" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill">
+						<img src="http://placehold.it/500x300" class="img-responsive">
 						<div class="content-pill-title">Title</div>
-						<div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;&nbsp;Author name</span></div>
+							<div class="content-pill-author">
+								<span><img src="http://placehold.it/20x20" class="img-circle"></span>
+								<span>&nbsp;&nbsp;&nbsp;Author name</span>
+							</div>
 						<div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 						<div class="well zero-padding content-pill-footer">
-							<div class="label label-default"><span class="glyphicon glyphicon-heart"></span><span>999</span></div>
-						</div></a><a href="#" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
-						<div class="content-pill-title">Title</div>
-						<div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;&nbsp;Author name</span></div>
-						<div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-						<div class="well zero-padding content-pill-footer">
-							<div class="label label-default"><span class="glyphicon glyphicon-heart"></span><span>999</span></div>
-						</div></a>
+							<div class="label label-default">
+								<span class="glyphicon glyphicon-heart"></span>
+								<span>999</span>
+							</div>
+						</div>
+					</a>
 				</div>
 				<div id="comments" role="tabpanel" class="tab-pane">
-					<div id="comment-form" class="container-fluid">
+					<div id="comment-form" class="container-fluid zero-margin">
 						<textarea type="text" placeholder="Comment here" rows="5" data-autoresize class="col-xs-12 col-md-8"></textarea>
 						<div class="col-md-4"></div>
 						<button id="submit-button" type="submit" class="btn btn-success">Post</button>
 					</div>
-					<div class="container-fluid">
-						<div id="comment-box-header" class="row"><span class="text-left"><strong>3 comments</strong></span><span class="pull-right comment-stats text-muted">Most liked</span><span class="pull-right comment-stats">Newest</span></div>
+					<div class="container-fluid zero-margin">
+						<div id="comment-box-header" class="row">
+							<span class="text-left"><strong>3 comments</strong></span>
+							<span class="pull-right comment-stats text-muted">Most liked</span>
+							<span class="pull-right comment-stats">Newest</span>
+						</div>
 						<div class="row comment-post">
-							<div class="comment-post-left pull-left"><img src="http://placehold.it/100x100" class="img-responsive img-circle center-block">
+							<div class="comment-post-left pull-left">
+								<img src="http://placehold.it/100x100" class="img-responsive img-circle center-block">
 								<h6 class="text-center">Name</h6>
 							</div>
 							<div class="bubble left">
-								<div class="comment-post-stats"><span class="glyphicon glyphicon-heart pull-right"><span>999</span></span><span class="glyphicon glyphicon-heart pull-right"><span>999</span></span><span class="glyphicon glyphicon-heart pull-right"><span>999</span></span></div>
-								<div class="comment-post-content">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<div class="comment-post-stats comment-post-profile-pic">
+									<img src="http://placehold.it/20x20" class="img-responsive img-circle brainstorm-comment-img-inline">
+									<span>&nbsp;Name</span>
 								</div>
+								<div class="comment-post-stats pull-right">
+									<span class="glyphicon glyphicon-thumbs-up"></span>
+									<span>&nbsp;999</span>
+								</div>
+								<div class="comment-post-stats pull-right">
+									<span class="glyphicon glyphicon-time"></span>
+									<span>&nbsp;999</span>
+								</div>
+							</div>
+							<div class="comment-post-content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
 						</div>
 						<div class="row comment-post">
-							<div class="comment-post-left pull-left"><img src="http://placehold.it/100x100" class="img-responsive img-circle center-block">
+							<div class="comment-post-left pull-left">
+								<img src="http://placehold.it/100x100" class="img-responsive img-circle center-block">
 								<h6 class="text-center">Name</h6>
 							</div>
 							<div class="bubble left">
-								<div class="comment-post-stats"><span class="glyphicon glyphicon-heart pull-right"><span>999</span></span><span class="glyphicon glyphicon-heart pull-right"><span>999</span></span><span class="glyphicon glyphicon-heart pull-right"><span>999</span></span></div>
-								<div class="comment-post-content">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<div class="comment-post-stats comment-post-profile-pic">
+									<img src="http://placehold.it/20x20" class="img-responsive img-circle brainstorm-comment-img-inline">
+									<span>&nbsp;Name</span>
 								</div>
+								<div class="comment-post-stats pull-right">
+									<span class="glyphicon glyphicon-thumbs-up"></span>
+									<span>&nbsp;999</span>
+								</div>
+								<div class="comment-post-stats pull-right">
+									<span class="glyphicon glyphicon-time"></span>
+									<span>&nbsp;999</span>
+								</div>
+							</div>
+							<div class="comment-post-content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
 						</div>
 						<div class="row comment-post">
-							<div class="comment-post-left pull-left"><img src="http://placehold.it/100x100" class="img-responsive img-circle center-block">
+							<div class="comment-post-left pull-left">
+								<img src="http://placehold.it/100x100" class="img-responsive img-circle center-block">
 								<h6 class="text-center">Name</h6>
 							</div>
 							<div class="bubble left">
-								<div class="comment-post-stats"><span class="glyphicon glyphicon-heart pull-right"><span>999</span></span><span class="glyphicon glyphicon-heart pull-right"><span>999</span></span><span class="glyphicon glyphicon-heart pull-right"><span>999</span></span></div>
-								<div class="comment-post-content">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<div class="comment-post-stats comment-post-profile-pic">
+									<img src="http://placehold.it/20x20" class="img-responsive img-circle brainstorm-comment-img-inline">
+									<span>&nbsp;Name</span>
 								</div>
+								<div class="comment-post-stats pull-right">
+									<span class="glyphicon glyphicon-thumbs-up"></span>
+									<span>&nbsp;999</span>
+								</div>
+								<div class="comment-post-stats pull-right">
+									<span class="glyphicon glyphicon-time"></span>
+									<span>&nbsp;999</span>
+								</div>
+							</div>
+							<div class="comment-post-content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
 						</div>
 					</div>
@@ -127,15 +208,4 @@
 		</div>
 		<div class="col-md-1"></div>
 	</div>
-	<footer id="footer" class="container-fluid">
-		<div class="col-md-2"></div>
-		<div class="col-md-4">
-			<h5>CollabApp Logo</h5>
-			<h6>All rights reserved &#169;</h6>
-		</div>
-		<div class="col-md-4 text-right bottom-align-text">
-			<h6>School of Mechanical And Aerospace Engineering<br>Nanyang Technological University, Singapore</h6>
-		</div>
-		<div class="col-md-2"></div>
-	</footer>
 </template>
