--- a/client/templates/explore.html
+++ b/client/templates/explore.html
@@ -1,7 +1,7 @@
 <template name="explore">
 	<div class="container-fluid zero-margin zero-padding">
 		<div id="left-panel" class="col-md-2">
-			<a href="{{pathFor route='new-project'}}"><button class="btn btn-primary center-block">New</button></a>
+			<button id="new" class="btn btn-primary center-block">New</button>
 			<div id="category" class="row center-block">
 				<h5>Categories</h5>
 				<div class="input-group">
@@ -65,7 +65,7 @@
 			</div>
 			<div id="load-content" class="row">
 				{{#each projects}}
-					<div href="project.html" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill project">
+					<div href="project.html" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill project clickable">
 						<img src="http://placehold.it/500x300" class="img-responsive">
 						<div class="content-pill-title">{{title}}</div>
 						<div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;&nbsp;{{author}}</span></div>
@@ -77,8 +77,8 @@
 								<span>{{views}}</span>
 							</div>
 							<div class="badge">
-								<span class="glyphicon glyphicon-stats"></span>
-								<span>{{stats}}</span>
+								<span class="glyphicon glyphicon-star"></span>
+								<span>{{stars}}</span>
 							</div>
 							<span class="pull-right">{{createdAt}}</span>
 						</div>
