--- a/client/templates/master.html
+++ b/client/templates/master.html
@@ -24,10 +24,10 @@
 				<ul class="nav navbar-nav navbar-right">
 				{{#if currentUser}}
 					<li>
-						<a href="#"><p>{{currentUser.profile.firstName}} {{currentUser.profile.lastName}}</p></a>
+						<a href="#"><strong>{{currentUser.profile.firstName}} {{currentUser.profile.lastName}}</strong></a>
 					</li>
 					<li>
-						<a href="#"><button class="btn btn-default logout">Logout</button></a>
+						<a href="#" class="logout">Logout</a>
 					</li>
 				{{else}}
 					<li>
@@ -48,7 +48,7 @@
 			<h5>CollabApp Logo</h5>
 			<h6>All rights reserved &#169;</h6>
 		</div>
-		<div class="col-md-4 text-right bottom-align-text">
+		<div class="col-md-4 bottom-align-text">
 			<h6>School of Mechanical And Aerospace Engineering<br>Nanyang Technological University, Singapore</h6>
 		</div>
 		<div class="col-md-2"></div>
