--- a/client/templates/new-project-p3.html
+++ b/client/templates/new-project-p3.html
@@ -3,42 +3,48 @@
 		<div class="create-project-input-area">
 			<form class="form-horizontal">
 				<h4 class="text-center">Tasks</h4>
-				<button class="btn btn-default">Add task</button>
 				<div class="task-container">
-					<div class="well"><a data-toggle="modal" data-target="#new-project-task-1">Task title</a></div>
-					<div class="well"><a data-toggle="modal" data-target="#new-project-task-2">Task title 2</a></div>
-					<div id="new-project-task-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" class="modal fade">
-						<div role="document" class="modal-dialog new-project-task-modal">
-							<div class="modal-content">
-								<div class="modal-body">
-									<button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">&#x00D7;</span></button>
-									<input id="new-project-task-1-title" type="text" placeholder="Task title" class="new-project-task-title form-control">
-									<textarea id="new-project-task-1-description" placeholder="Task description" class="new-project-task-description form-control"></textarea>
-								</div>
-								<div class="modal-footer">
-									<button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
-									<button type="button" class="btn btn-primary">Save</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div id="new-project-task-2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" class="modal fade">
-						<div role="document" class="modal-dialog new-project-task-modal">
-							<div class="modal-content">
-								<div class="modal-body">
-									<button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">&#x00D7;</span></button>
-									<input id="new-project-task-2-title" type="text" placeholder="Task title" class="new-project-task-title form-control">
-									<textarea id="new-project-task-2-description" placeholder="Task description" class="new-project-task-description form-control"></textarea>
-								</div>
-								<div class="modal-footer">
-									<button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
-									<button type="button" class="btn btn-primary">Save</button>
-								</div>
-							</div>
-						</div>
-					</div>
+					<!-- Dynamically add here {{> newTask}} -->
+					{{#each tasks}}
+						{{> newTask}}
+					{{/each}}
 				</div>
 			</form>
+			<div>
+				<button class="btn btn-default center-block add-task">Add task</button>
+			</div>
 		</div>
     </div>
+</template>
+
+<template name="newTask">
+	<div id="task-{{_id}}" class="row">
+		<div class="well col-md-11 title-well clickable"  data-toggle="modal" data-target="#new-project-task-{{_id}}">
+			<h5 class="title">[New task]</h5>
+		</div>
+		<div class="col-md-1">
+			<button class="btn btn-default center-block remove-task">Remove</button>
+		</div>
+	</div>
+	{{> model}}
+</template>
+
+<template name="model">
+	<div id="new-project-task-{{_id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" class="modal fade">
+		<div role="document" class="modal-dialog new-project-task-modal">
+			<div class="modal-content">
+				<div class="modal-body">
+					<button type="button" data-dismiss="modal" aria-label="Close" class="close">
+						<span aria-hidden="true">&#x00D7;</span>
+					</button>
+					<input id="task-title" type="text" placeholder="Task title" class="new-project-task-title form-control">
+					<textarea id="task-description" placeholder="Task description" class="new-project-task-description form-control"></textarea>
+				</div>
+				<div class="modal-footer">
+					<button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+					<button type="button" class="btn btn-primary save-task">Save</button>
+				</div>
+			</div>
+		</div>
+	</div>
 </template>
