--- a/client/templates/project.html
+++ b/client/templates/project.html
@@ -5,30 +5,20 @@
 		<h3>{{title}}</h3>
 		<div class="col-md-push-10 col-md-2">
 			<h4>Team</h4>
-			<div class="row project-team-members">
-				<div class="col-xs-6 col-md-6"><img src="http://placehold.it/50x50" class="img-circle img-responsive"></div>
-				<div class="col-xs-6 col-md-6">
-					<div class="row">NName</div>
-					<div class="row">Designation</div>
+			{{#each collabs}}
+				<div class="row project-team-members">
+					<div class="col-xs-6 col-md-6">
+						<img src="http://placehold.it/50x50" class="img-circle img-responsive">
+					</div>
+					<div class="col-xs-6 col-md-6">
+						<div class="row"><strong>{{name}}</strong></div>
+						<div class="row">{{role}}</div>
+					</div>
 				</div>
-			</div>
-			<div class="row project-team-members">
-				<div class="col-xs-6 col-md-6"><img src="http://placehold.it/50x50" class="img-circle img-responsive"></div>
-				<div class="col-xs-6 col-md-6">
-					<div class="row">Name</div>
-					<div class="row">Designation</div>
-				</div>
-			</div>
-			<div class="row project-team-members">
-				<div class="col-xs-6 col-md-6"><img src="http://placehold.it/50x50" class="img-circle img-responsive"></div>
-				<div class="col-xs-6 col-md-6">
-					<div class="row">Name</div>
-					<div class="row">Designation</div>
-				</div>
-			</div>
-			<div class="row project-team-members-view-all">
+			{{/each}}
+			<!-- <div class="row project-team-members-view-all">
 				<button class="btn btn-default center-block">View all >>></button>
-			</div>
+			</div> -->
 			<div class="project-user-options">
 				<div class="row project-update-me-button">
 					<button class="btn btn-warning center-block">Update Me!</button>
@@ -45,14 +35,14 @@
 						<img src="/img/carousel/Project_2/1.jpg" class="img-responsive center-block gallery-thumbnail active-img">
 					</div>
 				</div>
-				<a href="#image-gallery" role="button" data-slide="prev" class="left carousel-control">
-					<span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a href="#image-gallery" role="button" data-slide="next" class="right carousel-control">
-					<span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span>
-					<span class="sr-only">Next</span>
-				</a>
+				 <a role="button" href="#image-gallery" data-slide="prev" class="left carousel-control">
+					 <span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span>
+					 <span class="sr-only">Previous</span>
+				 </a>
+				 <a role="button" href="#image-gallery" data-slide="next" class="right carousel-control">
+					 <span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span>
+					 <span class="sr-only">Next</span>
+				 </a>
 			</div>
 			<div class="owl-carousel">
 				<img src="/img/carousel/Project_2/2.jpg" class="img-responsive inactive-img-1">
@@ -71,9 +61,15 @@
 		<div class="col-md-10">
 			<!-- Nav tabs-->
 			<ul role="tablist" class="nav nav-tabs">
-				<li role="presentation" class="active"><a href="#dashboard" aria-controls="dashboard" role="tab" data-toggle="tab">Dashboard</a></li>
-				<li role="presentation"><a href="#project-tasks" aria-controls="tasks" role="tab" data-toggle="tab">Tasks</a></li>
-				<li role="presentation"><a href="#project-discussion" aria-controls="discussion" role="tab" data-toggle="tab">Discussion</a></li>
+				<li role="presentation" class="active">
+					<a href="#dashboard" aria-controls="dashboard" role="tab" data-toggle="tab">Dashboard</a>
+				</li>
+				<li role="presentation">
+					<a href="#project-tasks" aria-controls="tasks" role="tab" data-toggle="tab">Tasks</a>
+				</li>
+				<li role="presentation">
+					<a href="#project-discussion" aria-controls="discussion" role="tab" data-toggle="tab">Discussions</a>
+				</li>
 			</ul>
 			<!-- Tab panes-->
 			<div class="tab-content">
@@ -108,48 +104,22 @@
 					</div>
 				</div>
 				<div id="project-tasks" role="tabpanel" class="tab-pane">
-					<div class="well well-sm col-md-11">
-						<h4 class="col-md-12">Task title</h4>
-						<div class="row task-header">
-							<div class="col-xs-2 col-md-1 text-right">Fields:</div>
-							<div class="col-xs-10 col-md-11">
-								<div class="label label-primary">Field 1</div>
-								<div class="label label-primary">Field 2</div>
-								<div class="label label-primary">Field 3</div>
-								<div class="label label-primary">Field 4</div>
-								<div class="label label-primary">Field 5</div>
+					{{#each tasks}}
+						<div class="well well-sm col-md-11 task-well clickable"> <!-- navigate to project tasks -->
+							<h4 class="col-md-12">{{title}}</h4>
+							<div class="row task-header">
+								<div class="col-xs-2 col-md-1 text-right">Fields:</div>
+								<div class="col-xs-10 col-md-11">
+									<div class="label label-primary">Field 1</div>
+									<div class="label label-primary">Field 2</div>
+									<div class="label label-primary">Field 3</div>
+									<div class="label label-primary">Field 4</div>
+									<div class="label label-primary">Field 5</div>
+								</div>
 							</div>
+							<div class="panel-footer">9 people are working on this</div>
 						</div>
-						<div class="panel-footer">9 people are working on this</div>
-					</div>
-					<div class="well well-sm col-md-11">
-						<h4 class="col-md-12">Task title</h4>
-						<div class="row task-header">
-							<div class="col-xs-2 col-md-1 text-right">Fields:</div>
-							<div class="col-xs-10 col-md-11">
-								<div class="label label-primary">Field 1</div>
-								<div class="label label-primary">Field 2</div>
-								<div class="label label-primary">Field 3</div>
-								<div class="label label-primary">Field 4</div>
-								<div class="label label-primary">Field 5</div>
-							</div>
-						</div>
-						<div class="panel-footer">11 people are working on this</div>
-					</div>
-					<div class="well well-sm col-md-11">
-						<h4 class="col-md-12">Task title</h4>
-						<div class="row task-header">
-							<div class="col-xs-2 col-md-1 text-right">Fields:</div>
-							<div class="col-xs-10 col-md-11">
-								<div class="label label-primary">Field 1</div>
-								<div class="label label-primary">Field 2</div>
-								<div class="label label-primary">Field 3</div>
-								<div class="label label-primary">Field 4</div>
-								<div class="label label-primary">Field 5</div>
-							</div>
-						</div>
-						<div class="panel-footer">10 people are working on this</div>
-					</div>
+					{{/each}}
 				</div>
 				<div id="project-discussion" role="tabpanel" class="tab-pane">
 					<div class="project-discussion-new-topic">
@@ -166,23 +136,37 @@
 								<th class="post col">Post</th>
 								<th class="last-active-col">Last activity</th>
 							</tr>
-							<tr>
+							<tr> <!-- navigate to discussion -->
 								<td class="title-col">Task title</td>
 								<td class="author-col"><img src="http://placehold.it/25x25" class="img-circle img-responsive"></td>
 								<td class="created-col">4h ago</td>
-								<td class="joined-col"><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"></td>
+								<td class="joined-col">
+									<img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline">
+									<img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline">
+									<img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline">
+								</td>
 								<td class="view-col">99</td>
 								<td class="post-col">999</td>
-								<td class="last-active-col"><span><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"></span><span>&nbsp;4h ago</span></td>
+								<td class="last-active-col">
+									<span><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"></span>
+									<span>&nbsp;4h ago</span>
+								</td>
 							</tr>
-							<tr>
+							<tr> <!-- navigate to discussion -->
 								<td class="title-col">Task title</td>
 								<td class="author-col"><img src="http://placehold.it/25x25" class="img-circle img-responsive"></td>
-								<td class="created-col">2 days ago</td>
-								<td class="joined-col"><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"></td>
-								<td class="view-col">88</td>
-								<td class="post-col">99</td>
-								<td class="last-active-col"><span><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"></span><span>&nbsp;8h ago</span></td>
+								<td class="created-col">4h ago</td>
+								<td class="joined-col">
+									<img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline">
+									<img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline">
+									<img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline">
+								</td>
+								<td class="view-col">99</td>
+								<td class="post-col">999</td>
+								<td class="last-active-col">
+									<span><img src="http://placehold.it/25x25" class="img-circle img-responsive project-discussion-img-inline"></span>
+									<span>&nbsp;4h ago</span>
+								</td>
 							</tr>
 						</table>
 					</div>
@@ -191,25 +175,4 @@
 		</div>
 		<div class="col-md-1"></div>
 	</div>
-	<!-- <script src="js/owl.carousel.min.js"></script>
-	<script>
-		$(document).ready(function(){ 
-			$('.owl-carousel').owlCarousel({
-				items : 4,
-				itemsDesktop : [1199,3],
-				itemsDesktopSmall : [979,3]
-			});
-		})
-	</script> -->
-	<footer id="footer" class="container-fluid">
-		<div class="col-md-2"></div>
-		<div class="col-md-4">
-			<h5>CollabApp Logo</h5>
-			<h6>All rights reserved &#169;</h6>
-		</div>
-		<div class="col-md-4 text-right bottom-align-text">
-			<h6>School of Mechanical And Aerospace Engineering<br>Nanyang Technological University, Singapore</h6>
-		</div>
-		<div class="col-md-2"></div>
-	</footer>
 </template>
