--- a/client/templates/explore.html
+++ b/client/templates/explore.html
@@ -5,24 +5,11 @@
 			<div id="category" class="row center-block">
 				<h5>Categories</h5>
 				<div class="input-group">
-					<div class="input-group-button">
-						<button class="btn btn-default">Category 1</button>
-						<button class="btn btn-default">Category 2</button>
-						<button class="btn btn-default">Category 3</button>
-						<button class="btn btn-default">Category 4</button>
-						<button class="btn btn-default">Category 5</button>
-					</div>
-				</div>
-			</div>
-			<div id="tags" class="row center-block">
-				<h5>Tags</h5>
-				<div class="input-group">
-					<div class="input-group-button">
-						<button class="btn btn-default">Tag 1</button>
-						<button class="btn btn-default">Tag 2</button>
-						<button class="btn btn-default">Tag 3</button>
-						<button class="btn btn-default">Tag 4</button>
-						<button class="btn btn-default">Tag 5</button>
+					<div class="input-group-button text-center">
+						<button class="btn btn-default category-btn">Mechanical</button>
+						<button class="btn btn-default category-btn">Aeronautical</button>
+						<button class="btn btn-default category-btn">Electrical</button>
+						<button class="btn btn-default category-btn">Electronic</button>
 					</div>
 				</div>
 			</div>
