--- a/client/templates/project-task.html
+++ b/client/templates/project-task.html
@@ -3,7 +3,7 @@
 		<div class="col-md-1"></div>
 		<div class="col-md-10 zero-padding">
 			<ol class="breadcrumb">
-				<li><a href="project.html">{{projectTitle}}</a></li>
+				<li><a href="..">{{projectTitle}}</a></li>
 				<li class="active">Task #{{_id}}</li>
 			</ol>
 			<div class="col-md-push-9 col-md-3">
