--- a/client/templates/new-project-p1.html
+++ b/client/templates/new-project-p1.html
@@ -2,14 +2,36 @@
 	<div class="container-fluid">
 		<div class="create-project-input-area">
 			<form>
-				<h4 class="text-center">About Your Project</h4>
 				<div class="form-group">
-					<label for="project-title" class="input-labelling">Project Title</label>
+					<label class="input-labelling">You're about to create a</label>
+					<div class="radio-inline">
+						<label>
+							<input id="optionsRadios1" type="radio" name="optionsRadios" value="option1" checked="">Brainstorm
+						</label>
+					</div>
+					<div class="radio-inline">
+						<label>
+							<input id="optionsRadios2" type="radio" name="optionsRadios" value="option2">Project
+						</label>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="categories" class="input-labelling">Categories</label>
+					<select id="categories" class="form-control">
+						<option>Mechanical</option>
+						<option>Aeronautical</option>
+						<option>Electrical</option>
+						<option>Electronic</option>
+						<option>Other</option>
+					</select>
+				</div>
+				<div class="form-group">
+					<label for="project-title" class="input-labelling">Title</label>
 					<input id="project-title" type="text" class="form-control">
 				</div>
 				<div class="form-group">
-					<label for="project-description" class="input-labelling">Project Description</label>
-					<input id="project-description" type="text" class="form-control">
+					<label for="project-description" class="input-labelling">Description</label>
+					<textarea id="project-description" type="text" rows="3" class="form-control"></textarea>
 				</div>
 				<div class="form-group">
 					<label for="image-upload" class="input-labelling">Images</label>
