--- a/client/templates/project.html
+++ b/client/templates/project.html
@@ -117,7 +117,7 @@
 									<div class="label label-primary">Field 5</div>
 								</div>
 							</div>
-							<div class="panel-footer">9 people are working on this</div>
+							<div class="panel-footer">{{numOfSolutions}} suggested</div>
 						</div>
 					{{/each}}
 				</div>
