Fix various bugs

--- a/client/templates/project-task.html
+++ b/client/templates/project-task.html
@@ -38,7 +38,7 @@
 							</div>
 							<div class="row">
 								<span class="like clickable">
-									<span class="glyphicon glyphicon-thumbs-up"></span><span>&nbsp;&nbsp;{{likes}}</span>
+									<i class="fa fa-thumbs-o-up like-icon">&nbsp;&nbsp;{{likes}}</i>
 								</span>
 							</div>
 						</div>
