Enhance like feature

--- a/client/templates/project-task.html
+++ b/client/templates/project-task.html
@@ -37,8 +37,8 @@
 								<h6 class="text-justify project-task-content">{{text}}</h6>
 							</div>
 							<div class="row">
-								<span class="like clickable">
-									<i class="fa fa-thumbs-o-up like-icon">&nbsp;&nbsp;{{likes}}</i>
+								<span class="like clickable {{likeStatus}}">
+									<i class="fa {{icon}} like-icon">&nbsp;&nbsp;{{numOfLikes}}</i>
 								</span>
 							</div>
 						</div>
