Fix like bug & optimize task solution code

--- a/client/templates/new-project-p1.html
+++ b/client/templates/new-project-p1.html
@@ -16,8 +16,8 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="categories" class="input-labelling">Categories</label>
-					<select id="categories" class="form-control">
+					<label for="category" class="input-labelling">Categories</label>
+					<select id="category" class="form-control">
 						<option>Mechanical</option>
 						<option>Aeronautical</option>
 						<option>Electrical</option>
@@ -33,7 +33,7 @@
 					<label for="project-description" class="input-labelling">Description</label>
 					<textarea id="project-description" type="text" rows="3" class="form-control"></textarea>
 				</div>
-				<div class="form-group">
+				<!-- <div class="form-group">
 					<label for="image-upload" class="input-labelling">Images</label>
 					<button id="image-upload" class="btn btn-default">Insert images</button>
 					<div class="panel img-panel">
@@ -42,7 +42,7 @@
 						<img src="http://placehold.it/150x100" class="img-responsive new-project-img-inline">
 						<img src="http://placehold.it/150x100" class="img-responsive new-project-img-inline">
 					</div>
-				</div>
+				</div> -->
 			</form>
 		</div>
 	</div>
