--- a/client/templates/project.html
+++ b/client/templates/project.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-pull-2 col-md-10 image-gallery">
+		<!-- <div class="col-md-pull-2 col-md-10 image-gallery">
 			<div id="image-gallery" data-ride="carousel" class="carousel slide">
 				<div role="listbox" class="carousel-inner">
 					<div class="item active">
@@ -52,7 +52,7 @@
 				<img src="/img/carousel/Project_2/6.jpg" class="img-responsive inactive-img-5">
 				<img src="/img/carousel/Project_2/7.jpg" class="img-responsive inactive-img-6">
 			</div>
-		</div>
+		</div> -->
 		<h6 class="text-justify col-md-10">{{description}}</h6>
 	</div>
 	<div class="col-md-1"></div>
